unpackaged/main/default/objects/FS_Authors__c/FS_Authors__c.object-meta.xml
<CustomObject>
    <label>Author</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Authors ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>