unpackaged/main/default/objects/FS_Authors__c/fields/FS_Author_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Author_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authors</relationshipLabel>
    <relationshipName>Authors</relationshipName>
    <type>Lookup</type>
</CustomField>