unpackaged/main/default/objects/FS_Authors__c/fields/FS_Item__c.field-meta.xml
<CustomField>
    <fullName>FS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Item/Book related to the Author</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Authors</relationshipLabel>
    <relationshipName>Authors</relationshipName>
    <type>Lookup</type>
</CustomField>