unpackaged/main/default/objects/FS_Authors__c/fields/FS_Royalty_Amount__c.field-meta.xml
<CustomField>
    <fullName>FS_Royalty_Amount__c</fullName>
    <formula>FS_Item__r.OrderApi__Price__c  * FS_Royalty_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Royalty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>