unpackaged/main/default/objects/FS_Authors__c/fields/FS_Royalty_Percentage__c.field-meta.xml
<CustomField>
    <fullName>FS_Royalty_Percentage__c</fullName>
    <inlineHelpText>Percentage of Royalty for Author</inlineHelpText>
    <label>Royalty Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>